Package_Tools/include-C/libxml2/libxml/in_arbeit/fertig/xmlwriter.pp


function xmlTextWriterStartCDATA(writer:TxmlTextWriterPtr):longint;cdecl;external;
function xmlTextWriterEndCDATA(writer:TxmlTextWriterPtr):longint;cdecl;external;
{
 * CDATA conveniency functions
  }
(* Const before type ignored *)
function xmlTextWriterWriteFormatCDATA(writer:TxmlTextWriterPtr; format:Pchar; args:array of const):longint;cdecl;external;
function xmlTextWriterWriteFormatCDATA(writer:TxmlTextWriterPtr; format:Pchar):longint;cdecl;external;
(* Const before type ignored *)
function xmlTextWriterWriteVFormatCDATA(writer:TxmlTextWriterPtr; format:Pchar; argptr:Tva_list):longint;cdecl;external;
(* Const before type ignored *)
function xmlTextWriterWriteCDATA(writer:TxmlTextWriterPtr; content:PxmlChar):longint;cdecl;external;
{
 * DTD
  }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterStartDTD(writer:TxmlTextWriterPtr; name:PxmlChar; pubid:PxmlChar; sysid:PxmlChar):longint;cdecl;external;
function xmlTextWriterEndDTD(writer:TxmlTextWriterPtr):longint;cdecl;external;
{
 * DTD conveniency functions
  }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteFormatDTD(writer:TxmlTextWriterPtr; name:PxmlChar; pubid:PxmlChar; sysid:PxmlChar; format:Pchar; 
           args:array of const):longint;cdecl;external;
function xmlTextWriterWriteFormatDTD(writer:TxmlTextWriterPtr; name:PxmlChar; pubid:PxmlChar; sysid:PxmlChar; format:Pchar):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteVFormatDTD(writer:TxmlTextWriterPtr; name:PxmlChar; pubid:PxmlChar; sysid:PxmlChar; format:Pchar; 
           argptr:Tva_list):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteDTD(writer:TxmlTextWriterPtr; name:PxmlChar; pubid:PxmlChar; sysid:PxmlChar; subset:PxmlChar):longint;cdecl;external;
{*
 * xmlTextWriterWriteDocType:
 *
 * this macro maps to xmlTextWriterWriteDTD
  }
const
  xmlTextWriterWriteDocType = xmlTextWriterWriteDTD;  
{
 * DTD element definition
  }
(* Const before type ignored *)

function xmlTextWriterStartDTDElement(writer:TxmlTextWriterPtr; name:PxmlChar):longint;cdecl;external;
function xmlTextWriterEndDTDElement(writer:TxmlTextWriterPtr):longint;cdecl;external;
{
 * DTD element definition conveniency functions
  }
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteFormatDTDElement(writer:TxmlTextWriterPtr; name:PxmlChar; format:Pchar; args:array of const):longint;cdecl;external;
function xmlTextWriterWriteFormatDTDElement(writer:TxmlTextWriterPtr; name:PxmlChar; format:Pchar):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteVFormatDTDElement(writer:TxmlTextWriterPtr; name:PxmlChar; format:Pchar; argptr:Tva_list):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteDTDElement(writer:TxmlTextWriterPtr; name:PxmlChar; content:PxmlChar):longint;cdecl;external;
{
 * DTD attribute list definition
  }
(* Const before type ignored *)
function xmlTextWriterStartDTDAttlist(writer:TxmlTextWriterPtr; name:PxmlChar):longint;cdecl;external;
function xmlTextWriterEndDTDAttlist(writer:TxmlTextWriterPtr):longint;cdecl;external;
{
 * DTD attribute list definition conveniency functions
  }
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteFormatDTDAttlist(writer:TxmlTextWriterPtr; name:PxmlChar; format:Pchar; args:array of const):longint;cdecl;external;
function xmlTextWriterWriteFormatDTDAttlist(writer:TxmlTextWriterPtr; name:PxmlChar; format:Pchar):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteVFormatDTDAttlist(writer:TxmlTextWriterPtr; name:PxmlChar; format:Pchar; argptr:Tva_list):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteDTDAttlist(writer:TxmlTextWriterPtr; name:PxmlChar; content:PxmlChar):longint;cdecl;external;
{
 * DTD entity definition
  }
(* Const before type ignored *)
function xmlTextWriterStartDTDEntity(writer:TxmlTextWriterPtr; pe:longint; name:PxmlChar):longint;cdecl;external;
function xmlTextWriterEndDTDEntity(writer:TxmlTextWriterPtr):longint;cdecl;external;
{
 * DTD entity definition conveniency functions
  }
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteFormatDTDInternalEntity(writer:TxmlTextWriterPtr; pe:longint; name:PxmlChar; format:Pchar; args:array of const):longint;cdecl;external;
function xmlTextWriterWriteFormatDTDInternalEntity(writer:TxmlTextWriterPtr; pe:longint; name:PxmlChar; format:Pchar):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteVFormatDTDInternalEntity(writer:TxmlTextWriterPtr; pe:longint; name:PxmlChar; format:Pchar; argptr:Tva_list):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteDTDInternalEntity(writer:TxmlTextWriterPtr; pe:longint; name:PxmlChar; content:PxmlChar):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteDTDExternalEntity(writer:TxmlTextWriterPtr; pe:longint; name:PxmlChar; pubid:PxmlChar; sysid:PxmlChar; 
           ndataid:PxmlChar):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteDTDExternalEntityContents(writer:TxmlTextWriterPtr; pubid:PxmlChar; sysid:PxmlChar; ndataid:PxmlChar):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteDTDEntity(writer:TxmlTextWriterPtr; pe:longint; name:PxmlChar; pubid:PxmlChar; sysid:PxmlChar; 
           ndataid:PxmlChar; content:PxmlChar):longint;cdecl;external;
{
 * DTD notation definition
  }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteDTDNotation(writer:TxmlTextWriterPtr; name:PxmlChar; pubid:PxmlChar; sysid:PxmlChar):longint;cdecl;external;
{
 * Indentation
  }
function xmlTextWriterSetIndent(writer:TxmlTextWriterPtr; indent:longint):longint;cdecl;external;
(* Const before type ignored *)
function xmlTextWriterSetIndentString(writer:TxmlTextWriterPtr; str:PxmlChar):longint;cdecl;external;
function xmlTextWriterSetQuoteChar(writer:TxmlTextWriterPtr; quotechar:TxmlChar):longint;cdecl;external;
{
 * misc
  }
function xmlTextWriterFlush(writer:TxmlTextWriterPtr):longint;cdecl;external;
{ C++ end of extern C conditionnal removed }
{$endif}
{ LIBXML_WRITER_ENABLED  }
{$endif}
{ __XML_XMLWRITER_H__  }

implementation


end.
